--- a/public/cadMedico.html
+++ b/public/cadMedico.html
@@ -86,7 +86,7 @@
 
     //Envia os dados para o servidor utilizando o método fetch()
 
-    fetch('http://localhost:3000/medico',{
+    fetch('medico',{
         method: 'POST', //Método HTTP Utilizado (POST), Headrs é um objeto de requisição HTTP que Insere no JSON as Informações
         headers:{
             "content-Type":
